[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/TimeBubble.gd" type="Script" id=1]
[ext_resource path="res://gui/whiteCircle.png" type="Texture" id=2]
[ext_resource path="res://gui/LevelPalette.tres" type="Material" id=3]

[sub_resource type="Animation" id=1]
resource_name = "grow"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 3 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 160.0

[sub_resource type="CircleShape2D" id=4]
radius = 143.0

[node name="TimeBubble" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource( 3 )
margin_left = -162.0
margin_top = -162.0
margin_right = 154.0
margin_bottom = 154.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 162, 162 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/grow = SubResource( 1 )
anims/shrink = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="EntranceBox" type="Area2D" parent="."]
pause_mode = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EntranceBox"]
shape = SubResource( 4 )

[connection signal="body_exited" from="." to="." method="_on_CameraCapture_body_exited"]
[connection signal="body_entered" from="EntranceBox" to="." method="_on_CameraCapture_body_entered"]
